# ImPlay-clang

./: CMakeLists.txt  CMakePresets.json  ImPlay.slnx  Implay_Installer.iss  README.md  architecture.md  build-windows-clang.ps1
.github/workflows/: build.yml  release.yml
cmake/: CreateCpackPackage.cmake  GetMpvWinDev.cmake
experimental/: experimental.sln
experimental/ImPlay.Fs/: App.axaml  App.axaml.fs  Cli.fs  Config.fs  DebugWindow.axaml  DebugWindow.axaml.fs  Domain.fs  ImPlay.Fs.fsproj  Ipc.fs  Lang.fs  MainWindow.axaml  MainWindow.axaml.fs  Media.fs  Platform.fs  Program.fs  SettingsWindow.axaml  SettingsWindow.axaml.fs  StartupLog.fs  app.manifest  paket.dependencies  paket.references  porting_plan_beta.md  setup_mpv.ps1
experimental/ImPlay.Fs/mpv-dev/include/mpv/: client.h  render.h  render_gl.h  stream_cb.h
experimental/ImPlay.Fs/scripts/: smoke-launch.ps1
experimental/ImPlay/Implay.Core/: ImPlay.Core.csproj  PathHelper.cs
experimental/ImPlay/Implay.Core/Models/: MediaState.cs  SubtitleSearchResult.cs  VideoFrameData.cs
experimental/ImPlay/Implay.Core/Services/: DlnaCastService.cs  MediaService.cs  PlaybackService.cs  SettingsService.cs  StartupLogger.cs  SubtitleParser.cs  SubtitleSearchService.cs
experimental/implayfsharpavalonia/: build-fs.ps1
experimental/implayfsharpavalonia/App/: App.axaml  App.axaml.cs  App.fs  ImPlay.App.fsproj  Program.fs
experimental/implayfsharpavalonia/App/Assets/Icons/: MediaIcons.axaml
experimental/implayfsharpavalonia/App/Assets/Styles/: ImPlay.axaml
experimental/implayfsharpavalonia/App/Controls/: AudioBars.fs  MpvVideoSurface.fs  NativeMpvVideoHost.fs  SeekBar.fs  VolumeSlider.fs
experimental/implayfsharpavalonia/App/ViewModels/: MainViewModel.fs
experimental/implayfsharpavalonia/App/Views/: AboutDialog.axaml  BookmarksDialog.axaml  CastDialog.axaml  Dialogs.fs  JumpToTimeDialog.axaml  KeyboardShortcutsDialog.axaml  MainWindow.axaml  MainWindow.fs  SubtitleSearchDialog.axaml  SubtitleSettingsDialog.axaml  VideoAdjustmentsDialog.axaml
experimental/implayfsharpavalonia/Core/: DlnaCastService.fs  ImPlay.Core.fsproj  MediaService.fs  Models.fs  Mpv.fs  PathHelper.fs  PlaybackService.fs  SettingsService.fs  StartupLogger.fs  SubtitleParser.fs  SubtitleSearchService.fs
experimental/implayfsharpavalonia/publish/: ImPlay.Core.xml
include/: config.h  mpv.h  player.h  theme.h  window.h
include/helpers/: imgui.h  lang.h  nfd.h  utils.h
include/views/: about.h  command_palette.h  context_menu.h  debug.h  quickview.h  settings.h  view.h
resources/romfs/lang/: en-US.json  it-IT.json  uk-UA.json  zh-Hans.json
source/: config.cpp  main.cpp  mpv.cpp  player.cpp  theme.cpp  window.cpp
source/helpers/: imgui.cpp  lang.cpp  nfd.cpp  utils.cpp
source/views/: about.cpp  command_palette.cpp  context_menu.cpp  debug.cpp  quickview.cpp  settings.cpp  view.cpp
